--- a/index.html
+++ b/index.html
@@ -111,12 +111,16 @@
 
 
   <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li><strong>Portfolio Website:</strong> A personal website showcasing my work.</li>
-      <li><strong>Weather App:</strong> An app that fetches weather data from an API.</li>
-    </ul>
-  </section>
+  <h2>Projects</h2>
+  <ul>
+    <li><strong>Portfolio Website:</strong> A personal website showcasing my work.</li>
+    <li><strong>Weather App:</strong> An app that fetches weather data from an API.</li>
+    <li><strong>Course Projects:</strong> Projects involving Wireshark, Docker, and vulnerability scans. 
+      <a href="https://muhammedz27.github.io/portfolio-projects/" target="_blank">View on GitHub</a>
+    </li>
+  </ul>
+</section>
+
 
   <section id="contact">
   <h2>Contact Me</h2>
