--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
     <li><strong>Portfolio Website:</strong> A personal website showcasing my work.</li>
     <li><strong>Weather App:</strong> An app that fetches weather data from an API.</li>
     <li><strong>Course Projects:</strong> Projects involving Wireshark, Docker, and vulnerability scans. 
-      <a href="https://muhammedz27.github.io/portfolio-projects/" target="_blank">View on GitHub</a>
-    </li>
+<a href="https://muhammedz27.github.io/portfolio-projects/" target="_blank" style="display: inline-block; margin-top: 0.5rem; padding: 0.5rem 1rem; background-color: #333; color: white; text-decoration: none; border-radius: 5px;">View Course Projects on GitHub</a>
   </ul>
 </section>
 
