--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
 
   <section id="projects">
   <h2>Projects</h2>
-  <ul>
-    <li><strong>Course Projects:</strong> Projects involving guess the code python code, and a password generator python code. 
-<a href="https://muhammedz27.github.io/portfolio-projects/" target="_blank" style="display: inline-block; margin-top: 0.5rem; padding: 0.5rem 1rem; background-color: #333; color: white; text-decoration: none; border-radius: 5px;">View Course Projects on GitHub</a>
-  </ul>
+  <p>Projects involving <strong>Guess the Code</strong> Python code, and a <strong>Password Generator</strong> Python code.</p>
+  <a href="https://muhammedz27.github.io/portfolio-projects/" target="_blank" style="display: inline-block; margin-top: 0.5rem; padding: 0.5rem 1rem; background-color: #333; color: white; text-decoration: none; border-radius: 5px;">View on GitHub</a>
 </section>
+
 
 
   <section id="contact">
