--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </header>
 
   <section id="home" style="position: relative; padding-bottom: 10rem;">
-  <img src="website_qr_highres.png" alt="Website QR Code" style="position: absolute; top: 6rem; left: 1rem; width: 150px; height: 150px;">
+  <img src="code2.png" alt="Website QR Code" style="position: absolute; top: 6rem; left: 1rem; width: 150px; height: 150px;">
   <h2>Welcome to My Website</h2>
   <p>Graduating Student at Bowie State University</p>
 </section>
