--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 
   <section id="about">
-  <h2></h2>
+  <h2>about me</h2>
   <p>I’m Muhammed Zaid, a senior at Bowie State University, working toward a Bachelor of Science in Computer Technology (expected May 2025).I’m eager to apply my technical skills in real-world IT environments.</p>
 
   <p>Throughout my academic journey, I’ve completed hands-on projects involving Wireshark packet analysis, containerized application deployment with Docker, and vulnerability scanning with patch management. These experiences have strengthened my knowledge of networking, system administration, and cybersecurity best practices.</p>
