--- a/index.html
+++ b/index.html
@@ -86,12 +86,18 @@
     </nav>
   </header>
 
-  <section id="home" style="position: relative; padding-bottom: 12rem;">
+  <section id="home" style="position: relative; padding-bottom: 12rem; text-align: center; background: teal; color: white;">
   <h2>Welcome to My Website</h2>
   <p>Graduating Student at Bowie State University</p>
+  <div style="margin-top: 2rem;">
+    <p>Scan to view this portfolio:</p>
+    <img 
+      src="code2.png" 
+      alt="QR Code to Portfolio" 
+      style="margin-top: 1rem; width: 150px; height: 150px; border: 5px solid white; border-radius: 10px;"
+    />
+  </div>
 </section>
-
-
 
 
   <section id="about">
