--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </nav>
   </header>
 
-  <section id="home" style="position: relative; padding-bottom: 12rem; text-align: center; background: teal; color: white;">
+  <section id="home" style="position: relative; padding-bottom: 12rem; text-align: center; background: #1E3A8A; color: white;">
   <h2>Welcome to My Website</h2>
   <p>Graduating Student at Bowie State University</p>
   <div style="margin-top: 2rem;">
