--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
   } else if (input.includes("contact")) {
     return "You can reach me by email at z.muhammed2002@gmail.com or call me at 202-812-4617.";
   } else {
-    return "I'm just a simple chatbot for now 😊 Feel free to ask about my projects, skills, education, or contact info!";
+    return "Feel free to ask about my projects, skills, education, or contact info!";
   }
 }
 
